bonus/k8s/gitlab/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            requests:
              memory: "1500Mi"
              cpu: "500m"
            limits:
              memory: "3Gi"
          volumeMounts:
            - name: gitlab-storage
              mountPath: /var/opt/gitlab
      volumes:
        - name: gitlab-storage
          persistentVolumeClaim:
            claimName: gitlab-volume
