bonus/k8s/gitlab/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
